--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ sklearn = "^0.0"
 keras = "^2.4.3"
 tensorflow = "~2.4.0"
 pandas = "1.2.5"
+kerastuner-tensorboard-logger = "^0.2.3"
+tensorboard = "^2.5.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
