--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ tensorflow = "~2.4.0"
 pandas = "1.2.5"
 kerastuner-tensorboard-logger = "^0.2.3"
 tensorboard = "^2.5.0"
+Pyro4 = "^4.80"
+hpbandster = "^0.7.4"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
