--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ test_*
 plots
 save_results
 save_models
-Testingit/__pycache__
-Testingit/mnist_data
+optimization_utils/Optimization_HpBandSter/__pycache__
+archive
