--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "hyperparameter-optimization"
 version = "0.1.0"
 description = ""
-authors = ["Alexander Kuebel <alexander.kuebel@code.berlin>"]
+authors = ["Alexander Kuebel <alexander.kuebel@code.berlin>", "Fabian Rothfuß <fabian.rothfuss@code.berlin"]
 
 [tool.poetry.dependencies]
 python = "^3.7.10"
@@ -20,6 +20,8 @@ hpbandster = "^0.7.4"
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
 flake8 = "^3.9.2"
+autopep8 = "^1.5.7"
+mypy = "^0.910"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
